# planify-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  logger.rs  main.rs  settings.rs
src/models/: mod.rs  task.rs  user.rs
src/storage/: mod.rs  tasks.rs  users.rs
src/telegram/: mod.rs  schema.rs
storage/: test.db
storage/migrations/: 20250307113050_create_table_users.up.sql  20250309081554_create_table_tasks.up.sql
storage/queries/tasks/: create.sql  get_all.sql  get_completed.sql  update_status.sql
storage/queries/users/: insert.sql
